--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Golam Mahadi - Extrovert GMP</title>
+    <link rel="icon" href="pic/gmp-logo-22-png.png">
 
     <link rel="stylesheet" href="style.css">
 
